@@ -7,7 +7,12 @@ include /usr/share/quilt/quilt.make
 
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-PROXY_CONNECT	     = debian/connect-proxy_dunbar.patch
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+    SYSTEM = --build $(DEB_HOST_GNU_TYPE)
+else
+    SYSTEM = --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
+endif
+
 CFLAGS 		     = -Wall -g
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
   CFLAGS += -O0
@@ -15,12 +20,12 @@ else
   CFLAGS += -O2
 endif
 
+
 build: patch build-stamp
 build-stamp:
 	dh_testdir
 
-	CFLAGS="$(CFLAGS)" ./configure --prefix=/usr 			\
-	  --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)	\
+	CFLAGS="$(CFLAGS)" ./configure --prefix=/usr $(SYSTEM)          \
 	  --localstatedir=/var --enable-ssllib-cs 			\
 	  --with-cert-dir=/etc/ssl/certs --with-pem-dir=/etc/ssl/certs	\
 	  --enable-ipv6 --with-threads=pthread
